# machine-learning-cpp-example

./: .gitignore  README.md
machineLearning/: CMakeLists.txt
machineLearning/simpleLinearRegression/: CMakeLists.txt  simpleLinearRegression.cpp  simpleLinearRegression.h
